fix navbar-collapse on mobile

--- a/resources/assets/sass/components/_navbar.scss
+++ b/resources/assets/sass/components/_navbar.scss
@@ -14,7 +14,10 @@ header .navbar-default {
 }
 
 
-
+.navbar-collapse {
+  // max-height: 340px;
+max-height:none:
+}
 
 
 
